<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="#00BCD4">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:hint="@string/search_here"
                android:id="@+id/et_filterCriteria"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/filter"
                android:id="@+id/btnFilter"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/add_new_restaurant"
            android:id="@+id/btnAdd"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvRestaurants"
            />

    </LinearLayout>
</ScrollView>